# md5-crack

./: Cargo.toml  README.md
src/: main.rs
